# Nonlinear_Project

./: .gitignore  AXI4_LITE_PORTS_README.md  CMakeLists.txt  Csim.c  DIVIDER_PRECOMPUTE_SUMMARY.md  FINAL_TEST_SUMMARY.md  INTEGRATED_TEST_SUMMARY.md  SOLE_INTEGRATION_GUIDE.md  SOLE_MODULE_DOCUMENTATION.md  SOLE_TEST.txt  log.md
Csim/: LayerNorm  LayerNorm.c  LayerNorm.h  Softmax  Softmax.c  Softmax.h
Doc/: AXI_TIMEOUT_RECOVERY_REPORT.md  FIFO_DESIGN_REPORT.md  SOLE_readme.md  TMUX_使用教學.md
RTL/: Divider.sv  Divider_PreCompute.sv  Log2Exp.sv  Makefile  MaxUnit.sv  Max_FIFO.sv  Output_FIFO.sv  PROCESS_1.sv  PROCESS_2.sv  PROCESS_3.sv  Reduction.sv  SOLE.sv  SOLE_test.sv  SRAM.sv  Softmax.sv  WORKFLOW.md  run_rtl_test.sh  sole_pkg.sv  sole_test_sim  utils.sv
RTL/data/: SOLE_test_Data_rtl.txt
RTL/iverilog/: rtl_reference_test.py
RTL/script/: dc.sdc  setup_systemc_env.csh  setup_systemc_env.sh  synthesis.tcl
RTL/src/: Divider.sv  Divider_PreCompute.sv  Log2Exp.sv  MaxUnit.sv  Max_FIFO.sv  Output_FIFO.sv  PROCESS_1.sv  PROCESS_2.sv  PROCESS_3.sv  Reduction.sv  SOLE.sv  SRAM.sv  SRAM_TS1N16.sv  Softmax.sv  sole_pkg.sv  utils.sv
RTL/syn/: area.rpt  power.rpt  timing.rpt
RTL/syn_backup/0.93ns/: area.rpt  power.rpt  timing.rpt  timing_hold.rpt
RTL/syn_backup/0.95ns/: area.rpt  power.rpt  timing.rpt  timing_hold.rpt
RTL/syn_backup/0.9ns(violated)/: area.rpt  power.rpt  timing.rpt  timing_hold.rpt
RTL/syn_backup/1.25ns/: area.rpt  power.rpt  timing.rpt  timing_hold.rpt
RTL/syn_backup/1ns/: timing_hold.rpt
RTL/tb/: Divider_PreCompute_test.sv  Divider_test.sv  Log2Exp_test.sv  MaxUnit_test.sv  Max_FIFO_test.sv  Output_FIFO_test.sv  PROCESS_2_test.sv  Reduction_test.sv  SOLE_test.sv  SOLE_test_normal.sv  time_utils.c
RTL/tb/SOLE_AXI_DELAY_test/: run_post_sim_delay_scan.csh  run_post_sim_delay_scan.sh
SystemC/include/: Divider.h  Log2Exp.h  MaxUnit.h  Max_FIFO.h  Output_FIFO.h  PROCESS_1.h  PROCESS_2.h  PROCESS_3.h  Reduction.h  SOLE.h  Softmax.h  axi4-lite.hpp  utils.hpp
SystemC/src/: Divider.cpp  Divider_PreCompute.cpp  Log2Exp.cpp  MaxUnit.cpp  Output_FIFO.cpp  Reduction.cpp  Softmax.cpp
SystemC/test/: Divider_PreCompute_test.cpp  Log2Exp_test.cpp  Max_FIFO_test.cpp  Output_FIFO_test.cpp  SOLE_test.cpp
SystemC/test/SOLE_Calculation_TEST/: SOLE_CALCULATION_TEST_REPORT.md  run_calculation_cases.sh
SystemC/test/SOLE_Calculation_TEST/testcases/: 04_close_values_1p001_1p002_1p003.txt  06_alternating_sign_pm5.txt  10_bimodal_clusters.txt
SystemC/test/SOLE_Execution_Time_TEST/: read_me.txt  run_softmax_timing_report.sh  softmax_exec_time_results.csv
include/: Divider.h  Divider_PreCompute.h  E2Softmax_LayerNorm.h  Log2Exp.h  MaxUnit.h  Max_Buffer.h  Max_FIFO.h  Output_Buffer.h  Output_FIFO.h  PROCESS_1.h  PROCESS_2.h  PROCESS_3.h  Reduction.h  SOLE.h  SOLE_MMIO.hpp  SRAM.h  Softmax.h  Status.hpp  Sum_Buffer.h  utils.h
src/: Divider.cpp  Divider_PreCompute.cpp  E2Softmax_LayerNorm.cpp  Log2Exp.cpp  MaxUnit.cpp  Max_Buffer.cpp  Max_FIFO.cpp  Output_Buffer.cpp  Output_FIFO.cpp  PROCESS_1.cpp  PROCESS_2.cpp  PROCESS_3.cpp  Reduction.cpp  SOLE.cpp  SRAM.cpp  Softmax.cpp  Sum_Buffer.cpp  utils.cpp
test/: Divider_PreCompute_test.cpp  Divider_test.cpp  Log2Exp_interactive.cpp  Log2Exp_test.cpp  MaxUnit_test.cpp  Max_Buffer_test.cpp  Max_FIFO_test.cpp  Output_Buffer_test.cpp  Output_FIFO_test.cpp  PROCESS_2_test.cpp  Reduction_test.cpp  SOLE_test.cpp  Softmax_integration_test.cpp  Softmax_minimal_test.cpp  Softmax_simple_test.cpp  Sum_Buffer_test.cpp  test_utils.h
test/SOLE_Calculation_TEST/: cosine_results.csv  read_me.txt
test/SOLE_Calculation_TEST/testcases/: 02_high_contrast_1_2_10.txt  03_extreme_large_1000_1001_1002.txt  07_single_spike.txt  08_increasing_ramp_minus4_to_4.txt  09_decreasing_ramp_4_to_minus4.txt  11_tiny_magnitudes.txt
test/SOLE_Execution_Time_TEST/: SOFTMAX_EXECUTION_TIME_REPORT.md  plot_softmax_exec_time.py  softmax_exec_time_plot_data.txt  softmax_overlimit_result.csv
testbench_gen/: Gen_LayerNorm.py  Gen_Softmax.py
